# pegasus

./: .gitignore  Cargo.toml  README.md
nso_test/: Makefile  nso_test.json
nso_test/source/: main.cpp
old_cpp_pegasus/include/pg/: pg_Base.hpp  pg_Result.hpp
old_cpp_pegasus/include/pg/emu/: emu_Base.hpp
old_cpp_pegasus/include/pg/kern/: kern_Base.hpp  kern_KAutoObject.hpp  kern_KCriticalSection.hpp  kern_KFutureSchedulerObject.hpp  kern_KSynchronization.hpp  kern_KSynchronizationObject.hpp  kern_KThread.hpp  kern_KTimeManager.hpp  kern_Results.hpp
old_cpp_pegasus/include/pg/ldr/: ldr_Nso.hpp  ldr_Results.hpp
old_cpp_pegasus/include/pg/util/: util_Align.hpp  util_Concurrent.hpp  util_Magic.hpp
old_cpp_pegasus/source/: main.cpp
old_cpp_pegasus/source/emu/: emu_Base.cpp
old_cpp_pegasus/source/kern/: kern_KAutoObject.cpp  kern_KSynchronization.cpp  kern_KThread.cpp
src/: emu.rs  fs.rs  ipc.rs  kern.rs  ldr.rs  main.rs  ncm.rs  os.rs  proc.rs  result.rs  set.rs  sm.rs  util.rs
src/emu/: cfg.rs  cpu.rs  kern.rs
src/emu/cpu/: result.rs
src/fs/: result.rs
src/ipc/: client.rs  cmif.rs  result.rs  server.rs  sf.rs
src/ipc/cmif/: client.rs  result.rs  server.rs
src/ipc/sf/: client.rs  hipc.rs  set.rs  sm.rs
src/ipc/sf/client/: sm.rs
src/ipc/tipc/: client.rs  server.rs
src/kern/: ipc.rs  mem.rs  proc.rs  result.rs  svc.rs  thread.rs
src/ldr/: npdm.rs  result.rs
src/ncm/: result.rs
src/proc/: set.rs  sm.rs
src/proc/set/: sys.rs
src/sm/: result.rs
unicorn-rs/: Cargo.toml  README.md  build.rs
unicorn-rs/src/: ffi.rs  lib.rs  libOld1.rs
(+12 files in other folders)
