[package]
name = "pegasus"
version = "0.1.0"
edition = "2018"
description = "Work-in-progress Nintendo Switch emulator, written in pure Rust and slightly less focused on gaming"

[dependencies]
unicorn = { path = "unicorn-rs" }
cntx = { git = "https://github.com/XorTroll/cntx" }
paste = "1.0"
lz4_flex = "0.9"
rsevents = "0.2.1"
parking_lot = "0.11.2"
scopeguard = "1.1.0"
backtrace = "0.3"
arrayvec = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"